[tool.poetry]
name = "test-voyage"
version = "0.0.0"
description = "Test Voyage"
authors = ["Ashwin Mathur"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/awinml/test-voyage"
repository = "https://github.com/awinml/test-voyage"
documentation = "https://test-voyage.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/awinml/test-voyage/releases"

[tool.poetry.dependencies]
python = ">=3.9"
click = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
coverage = {extras = ["toml"], version = "*"}
xdoctest = {extras = ["colors"], version = "*"}

[tool.poetry.group.dev.dependencies]
Pygments = "*"
black = "*"
darglint = "*"
ruff = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pre-commit-hooks = "*"
safety = "*"
typeguard = "*"

[tool.poetry.group.docs.dependencies]
furo = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-click = "*"
myst-parser = {version = "*"}

[tool.poetry.scripts]
test-voyage = "test_voyage.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["test_voyage", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ['src', 'tests']
line-length = 88
select = [
  'A',
  'ARG',
  'B',
  'B9',
  'BLE',
  'C',
  'C4',
  'D',
  'DTZ',
  'E',
  'F',
  'I',
  'N',
  'PIE',
  'PT',
  'PTH',
  'Q',
  'RET',
  'RUF',
  'S',
  'SIM',
  'SLF',
  'T10',
  'TCH',
  'UP',
  'W',
]
target-version = 'py37'

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'S',
    'D212',
    'D415',
    'D205',
    'D104',
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.isort]
force-single-line = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
